--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: monachus/hugo
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
-  HUGO_BASEURL: https://ipspace.gitlab.io/slovenia-hiking
+  HUGO_BASEURL: https://ipspace.gitlab.io/slovenia-hiking/
   TZ: Europe/Berlin
 
 pages:
