Final domain name

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 ---
-baseURL: https://ipspace.gitlab.io/slovenia-hiking/
+baseURL: https://sloveniahiking.rocks/
 theme: ipspace
 summarylength: 1000
 #uglyurls: true
