--- a/config.yaml
+++ b/config.yaml
@@ -59,6 +59,10 @@ languages:
       11: November
       12: December
 
+frontmatter:
+  date: ["lastmod", "date", "publishDate" ]
+  lastmod: [":git", "lastmod", "date", "publishDate"]
+
 permalinks:
   hikes: ":sections/:filename"
   izleti: "/izleti/:filename"
