Cleanup: Hrastovlje - Zazid
Also:
* Try new pre-commit ideas
* Improve hike sync process (sync additional properties, remove x/y/image if needed)
* Sync hike data

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,9 +14,9 @@
     language: script
     types: [file, markdown]
 
-#  - id: hike-sync
-#    name: Sync hike data
-#    entry: tools/hike-precommit.sh
-#    language: script
-#    files: "/hikes/"
-#    verbose: true
+  - id: hike-sync
+    name: Sync hike data
+    entry: tools/hike-precommit.sh
+    language: script
+    files: "/hikes/"
+    verbose: true
