Pre-commit: run hike hook as a single process

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,5 +18,6 @@
     name: Sync hike data
     entry: tools/hike-precommit.sh
     language: script
+    require_serial: true
     files: "/hikes/"
     verbose: true
