Calculate nearby trips

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,10 +14,10 @@
     language: script
     types: [file, markdown]
 
-  - id: hike-sync
-    name: Sync hike data
-    entry: tools/hike-precommit.sh
-    language: script
-    require_serial: true
-    files: "/hikes/"
-    verbose: true
+#  - id: hike-sync
+#    name: Sync hike data
+#    entry: tools/hike-precommit.sh
+#    language: script
+#    require_serial: true
+#    files: "/hikes/"
+#    verbose: true
