Move language parameters into the new "params" dictionary

--- a/config.yaml
+++ b/config.yaml
@@ -13,54 +13,56 @@ author:
 languages:
   sl:
     title: Po Sloveniji
-    flag: SLO
     weight: 1
-    month2:
-      1: januarja
-      2: februarja
-      3: marca
-      4: aprila
-      5: maja
-      6: junija
-      7: julija
-      8: avgusta
-      9: septembra
-      10: oktobra
-      11: novembra
-      12: decembra
-    month5:
-      1: januarju
-      2: februarju
-      3: marcu
-      4: aprilu
-      5: maju
-      6: juniju
-      7: juliju
-      8: avgustu
-      9: septembru
-      10: oktobru
-      11: novembru
-      12: decembru
+    params:
+      flag: SLO
+      month2:
+        1: januarja
+        2: februarja
+        3: marca
+        4: aprila
+        5: maja
+        6: junija
+        7: julija
+        8: avgusta
+        9: septembra
+        10: oktobra
+        11: novembra
+        12: decembra
+      month5:
+        1: januarju
+        2: februarju
+        3: marcu
+        4: aprilu
+        5: maju
+        6: juniju
+        7: juliju
+        8: avgustu
+        9: septembru
+        10: oktobru
+        11: novembru
+        12: decembru
   en:
     title: Outdoors Slovenia
     weight: 2
-    flag: ENG
-    month2:
-      1: January
-      2: February
-      3: March
-      4: April
-      5: May
-      6: June
-      7: July
-      8: August
-      9: September
-      10: October
-      11: November
-      12: December
+    params:
+      flag: ENG
+      month2:
+        1: January
+        2: February
+        3: March
+        4: April
+        5: May
+        6: June
+        7: July
+        8: August
+        9: September
+        10: October
+        11: November
+        12: December
 
 frontmatter:
-  date: ["lastmod", "date", "publishDate" ]
+  date: ["lastmod", "date", "publishDate"]
   lastmod: [":git", "lastmod", "date", "publishDate"]
 
 permalinks:
@@ -86,4 +88,4 @@ services:
 #  section: [ html ]
 
 params:
-  feedSections: [ posts ]
+  feedSections: [posts]
