Fix alpine flower data

--- a/data/alps.yml
+++ b/data/alps.yml
@@ -22,14 +22,14 @@ common:
   - Bartsia alpina
   - Bupleurum petraeum
   - Campanula barbata
-  - Campanula cochlearifolia
+  - Campanula cochleariifolia
   - Campanula scheuchzeri
   - Campanula zoysii
   - Carduus carduelis
   - Carduus defloratus
   - Carex firma
   - Carex sempervirens
-  - Cerastium carinthiacum agg.
+  - Cerastium carinthiacum subsp. austroalpinum
   - Cerastium strictum
   - Chamorchis alpina
   - Cicerbita alpina
@@ -79,7 +79,7 @@ common:
   - Minuartia verna subsp. gerardii
   - Moehringia ciliata
   - Myosotis alpestris
-  - Nigritella rhelicanii
+  - Nigritella rhellicani
   - Omalotheca hoppeana
   - Oxytropis pyrenaica
   - Paederota lutea
@@ -155,7 +155,7 @@ julian:
   - Aconitum angustifolium
   - Allium schoenoprasum
   - Anemone baldensis
-  - Aquilegia julia
+  - Aquilegia iulia
   - Arabis caerulea
   - Artemisia genipi
   - Campanula carnica
