--- a/data/flower_taxa.yml
+++ b/data/flower_taxa.yml
@@ -384,7 +384,8 @@ Lilium carniolicum: /flowers/Liliaceae/LiliumCarniolicum/index.md
 Lilium martagon: /flowers/Liliaceae/LiliumMartagon/index.md
 Linaria alpina: /flowers/Scrophulariaceae/LinariaAlpina/index.md
 Linaria vulgaris: /flowers/Scrophulariaceae/LinariaVulgaris/index.md
-Linum julicum: /flowers/Linaceae/LinumJulicum/index.md
+Linum alpinum: /flowers/Linaceae/LinumJulicum/index.md
+Linum alpinum subsp. julicum: /flowers/Linaceae/LinumJulicum/index.md
 Linum narbonense: /flowers/Linaceae/LinumNarbonense/index.md
 Linum tenuifolium: /flowers/Linaceae/LinumTenuifolium/index.md
 Linum viscosum: /flowers/Linaceae/LinumViscosum/index.md
@@ -658,6 +659,8 @@ Vincetoxicum hirundinaria: /flowers/Asclepiadaceae/VincetoxicumHirundinaria/inde
 Viola alba: /flowers/Violaceae/ViolaAlba/index.md
 Viola arvensis: /flowers/Violaceae/ViolaArvensis/index.md
 Viola biflora: /flowers/Violaceae/ViolaBiflora/index.md
+Viola calcarata: /flowers/Violaceae/ViolaZoysii/index.md
+Viola calcarata subsp. zoysii: /flowers/Violaceae/ViolaZoysii/index.md
 Viola canina: /flowers/Violaceae/ViolaCanina/index.md
 Viola collina: /flowers/Violaceae/ViolaCollina/index.md
 Viola hirta: /flowers/Violaceae/ViolaHirta/index.md
@@ -666,5 +669,3 @@ Viola reichenbachiana: /flowers/Violaceae/ViolaReichenbachiana/index.md
 Viola riviniana: /flowers/Violaceae/ViolaRiviniana/index.md
 Viola tricolor: /flowers/Violaceae/ViolaTricolorTricolor/index.md
 Viola tricolor subsp. tricolor: /flowers/Violaceae/ViolaTricolorTricolor/index.md
-Viola zoysii: /flowers/Violaceae/ViolaZoysii/index.md
----
