Waldsteinov => Greimlerjev osat

--- a/data/flower_taxa.yml
+++ b/data/flower_taxa.yml
@@ -163,12 +163,12 @@ Cirsium arvense: /flowers/Asteraceae/CirsiumArvense/index.md
 Cirsium carniolicum: /flowers/Asteraceae/CirsiumCarniolicum/index.md
 Cirsium eriophorum: /flowers/Asteraceae/CirsiumEriophorum/index.md
 Cirsium erisithales: /flowers/Asteraceae/CirsiumErisithales/index.md
+Cirsium greimleri: /flowers/Asteraceae/CirsiumWaldsteinii/index.md
 Cirsium oleraceum: /flowers/Asteraceae/CirsiumOleraceum/index.md
 Cirsium palustre: /flowers/Asteraceae/CirsiumPalustre/index.md
 Cirsium pannonicum: /flowers/Asteraceae/CirsiumPannonicum/index.md
 Cirsium spinosissimum: /flowers/Asteraceae/CirsiumSpinosissimum/index.md
 Cirsium vulgare: /flowers/Asteraceae/CirsiumVulgare/index.md
-Cirsium waldsteinii: /flowers/Asteraceae/CirsiumWaldsteinii/index.md
 Clematis alpina: /flowers/Ranunculaceae/ClematisAlpina/index.md
 Clematis integrifolia: /flowers/Ranunculaceae/ClematisIntegrifolia/index.md
 Clematis recta: /flowers/Ranunculaceae/ClematisRecta/index.md
@@ -669,3 +669,4 @@ Viola reichenbachiana: /flowers/Violaceae/ViolaReichenbachiana/index.md
 Viola riviniana: /flowers/Violaceae/ViolaRiviniana/index.md
 Viola tricolor: /flowers/Violaceae/ViolaTricolorTricolor/index.md
 Viola tricolor subsp. tricolor: /flowers/Violaceae/ViolaTricolorTricolor/index.md
+---
